--- a/feature/gallery/src/main/res/values/strings.xml
+++ b/feature/gallery/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="gallery_folder_topbar_title">사진첩</string>
     <string name="selected_images_count">%1$s/%2$s 선택됨</string>
+    <string name="no_more_image_select">더이상 이미지를 선택할 수 없습니다.</string>
 </resources>
