--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">withpeace</string>
+    <string name="home">홈</string>
+    <string name="post">게시판</string>
+    <string name="my_page">마이페이지</string>
 </resources>
