feat : Date 계산 로직 도메인으로 이동

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="minute_format">%1$d분 전</string>
     <string name="hour_format">%1$d시간 전</string>
     <string name="day_format">%1$d일 전</string>
+    <string name="years_format">%1$d년 전</string>
 
 </resources>
