--- a/feature/mypage/src/main/res/values/strings.xml
+++ b/feature/mypage/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="etc">기타</string>
     <string name="logout">로그아웃</string>
     <string name="withdraw">탈퇴하기</string>
+    <string name="network_failure_message">서버와의 오류가 발생했습니다. 다시 시도해주세요.</string>
 </resources>
