feat: 닉네임 네비게이션 전달 로직 추가

--- a/feature/profileeditor/src/main/res/values/strings.xml
+++ b/feature/profileeditor/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="edit_profile">프로필 편집</string>
     <string name="nickname_policy">닉네임은 2~10자의 한글, 영문만 가능합니다.</string>
+    <string name="edit_completed">수정 완료</string>
 </resources>
