--- a/feature/profileeditor/src/main/res/values/strings.xml
+++ b/feature/profileeditor/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="dialog_exit">나가기</string>
     <string name="dialog_save">저장하기</string>
     <string name="enter_nickname">닉네임을 입력하세요</string>
+    <string name="nickname_duplicated">중복된 닉네임입니다.</string>
 </resources>
