--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home">홈</string>
     <string name="post">게시판</string>
     <string name="my_page">마이페이지</string>
+    <string name="register">등록</string>
 </resources>
