feat: 정책분야 필터 화면 추가

--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="classification_partification_and_right">참여,권리</string>
     <string name="classification_etc">기타</string>
     <string name="filter_close">필터 닫기</string>
+    <string name="see_more">더보기</string>
+    <string name="policy_classfication">정책분야</string>
 </resources>
