feat: 앱 이름 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">withpeace</string>
+    <string name="app_name">청하</string>
     <string name="home">홈</string>
     <string name="post">게시판</string>
     <string name="my_page">마이페이지</string>
