--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="filter_all_off">전체 해제</string>
     <string name="search">검색하기</string>
     <string name="filter_fold">접기</string>
+    <string name="policy_classification_image">정책 분류 이미지</string>
 </resources>
