--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -19,4 +19,12 @@
     <string name="nickname_policy">닉네임은 2~10자의 한글, 영문만 가능합니다.</string>
     <string name="enter_nickname">닉네임을 입력하세요</string>
     <string name="nickname_duplicated">중복된 닉네임입니다.</string>
+
+    <!-- Policy   -->
+    <string name="classification_job">일자리</string>
+    <string name="classification_resident">주거</string>
+    <string name="classification_education">교육</string>
+    <string name="classification_wefare_and_culture">복지,문화</string>
+    <string name="classification_partification_and_right">참여,권리</string>
+    <string name="classification_etc">기타</string>
 </resources>
