feat: 정책 데이터가 없을 경우 화면 추가

--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="search">검색하기</string>
     <string name="filter_fold">접기</string>
     <string name="policy_classification_image">정책 분류 이미지</string>
+    <string name="no_result">검색 결과 없음</string>
 </resources>
