--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">청하</string>
     <string name="home">홈</string>
-    <string name="post">게시판</string>
+    <string name="youth_policy">청년정책</string>
+    <string name="post">커뮤니티</string>
     <string name="my_page">마이페이지</string>
-    <string name="register">등록</string>
 </resources>
