--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="filter_expanded">더보기</string>
     <string name="policy_classification_image">정책 분류 이미지</string>
     <string name="region">지역</string>
+    <string name="classification">정책분야</string>
     <string name="filter_all_off">전체 해제</string>
     <string name="search">검색하기</string>
 </resources>
